# learn-claude-code-by-building

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
.planning/: CODING_WORKFLOW.md  CROSS_COMPUTER_SYNC.md  FEISHU_SYNC.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: CODING_WORKFLOW.md  CROSS_COMPUTER_SYNC.md  FEISHU_SYNC.md  NEW_COMPUTER_HANDOFF.md
learning/: README.md  chapter-template.md
learning/s01-agent-loop/: evidence.md  guide.md  reflection.md
learning/s02-tool-use/: evidence.md  guide.md  reflection.md
learning/s03-permission/: evidence.md  guide.md  reflection.md
learning/s04-hooks/: evidence.md  guide.md  reflection.md
learning/s05-todo-write/: evidence.md  guide.md  reflection.md
learning/s06-subagent/: evidence.md  guide.md  reflection.md
learning/s07-skill-loading/: evidence.md  guide.md  reflection.md
tests/: test_s01_agent_loop.py  test_s02_tool_use.py  test_s03_permission.py  test_s04_hooks.py  test_s05_todo_write.py  test_s06_subagent.py  test_s07_skill_loading.py  test_s08_context_compact.py  test_s09_memory.py  test_s10_system_prompt.py  test_s11_error_recovery.py  test_s12_task_system.py  test_s13_background_tasks.py  test_s14_cron_scheduler.py  test_s15_agent_teams.py  test_s16_team_protocols.py  test_s17_autonomous_agents.py  test_smoke.py
(+47 files in other folders)
