[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-claude-code"
version = "0.0.0"
description = "A chapter-by-chapter coding agent harness learning project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.25.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mini-claude-code = "mini_claude_code.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

