[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-claude-code"
version = "0.0.0"
description = "A chapter-by-chapter coding agent harness learning project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.117,<0.118",
  "python-dotenv>=1.2.2,<2",
  "pyyaml>=6.0.3,<7",
]

[project.optional-dependencies]
dev = ["pytest>=9.1,<10"]

[project.scripts]
mini-claude-code = "mini_claude_code.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
